<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="60dp"
        android:paddingBottom="60dp"
        android:background="#7777BB"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_weight="0.25"
            android:gravity="center"
            android:src="@drawable/logo" />


        <Button
            android:id="@+id/button"
            android:layout_width="256dp"
            android:layout_height="10dp"
            android:layout_weight="0.25"
            android:gravity="center"
            android:backgroundTint="#9C27B0"
            android:text="@string/calc_simple" />

        <Button
            android:id="@+id/button2"
            android:layout_width="256dp"
            android:layout_height="10dp"
            android:layout_weight="0.25"
            android:gravity="center"
            android:backgroundTint="#9C27B0"
            android:text="@string/calc_sci" />


        <Button
            android:id="@+id/button3"
            android:layout_width="256dp"
            android:layout_height="10dp"
            android:layout_weight="0.25"
            android:gravity="center"
            android:backgroundTint="#9C27B0"
            android:text="@string/info" />

        <Button
            android:id="@+id/button4"
            android:layout_width="256dp"
            android:layout_height="10dp"
            android:layout_weight="0.25"
            android:gravity="center"
            android:backgroundTint="#9C27B0"
            android:text="@string/exit" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>