<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:background="#7777BB"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:gravity="center"
            android:src="@drawable/logo" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:paddingHorizontal="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:background="#7777BB"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/app_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="@string/app_name"
                    android:textSize="48sp"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/author_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/author"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="italic"/>

                <TextView
                    android:id="@+id/app_description_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/informations"
                    android:textColor="@color/material_dynamic_secondary30"
                    android:textSize="20sp" />

            </LinearLayout>

        </ScrollView>


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:backgroundTint="#555599"
            android:text="Menu"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="16sp"
            android:visibility="visible" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>